# pico_c_development

./: README.md
blinkTest/test/: CMakeLists.txt  Makefile  (+7 more)
test/: CMakeCache.txt  CMakeLists.txt  test.c  test.dis  test.elf  test.elf.map  test.uf2
test/code/: ArmHandler.c  ArmHandler.h  CMakeLists.txt
test/pico-sdk/: cmake_install.cmake
test/pico-sdk/docs/: Makefile
test/pico-sdk/src/: Makefile  cmake_install.cmake
test/pico-sdk/src/common/boot_picobin_headers/: cmake_install.cmake
test/pico-sdk/src/common/boot_picoboot_headers/: Makefile  cmake_install.cmake
test/pico-sdk/src/common/hardware_claim/: cmake_install.cmake
test/pico-sdk/src/common/pico_base_headers/: Makefile
test/pico-sdk/src/common/pico_binary_info/: cmake_install.cmake
test/pico-sdk/src/common/pico_bit_ops_headers/: Makefile  cmake_install.cmake
test/pico-sdk/src/common/pico_divider_headers/: Makefile  cmake_install.cmake
test/pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
test/pico-sdk/src/common/pico_time/: Makefile
test/pico-sdk/src/common/pico_usb_reset_interface_headers/: cmake_install.cmake
test/pico-sdk/src/rp2040/boot_stage2/: Makefile  bs2_default.elf  bs2_default.elf.map  bs2_default_padded_checksummed.S
test/pico-sdk/src/rp2040/hardware_regs/: cmake_install.cmake
test/pico-sdk/src/rp2040/hardware_structs/: Makefile  cmake_install.cmake
test/pico-sdk/src/rp2040/pico_platform/: Makefile
test/pico-sdk/src/rp2_common/cmsis/: cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_adc/: cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_base/: Makefile
test/pico-sdk/src/rp2_common/hardware_boot_lock/: cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_clocks/: cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_divider/: cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_exception/: Makefile
test/pico-sdk/src/rp2_common/hardware_flash/: cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_gpio/: Makefile
test/pico-sdk/src/rp2_common/hardware_i2c/: Makefile
test/pico-sdk/src/rp2_common/hardware_interp/: Makefile  cmake_install.cmake
test/pico-sdk/src/rp2_common/hardware_irq/: Makefile
test/pico-sdk/src/rp2_common/hardware_pll/: Makefile  cmake_install.cmake
test/pico-sdk/tools/: cmake_install.cmake
test/servo/: CMakeLists.txt  Makefile
(+153 files in other folders)
